--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ mxcache-commons/*.iml
 mxcache-ds10-integration/*.iml
 mxcache-ds11-integration/*.iml
 mxcache-ehcache-integration/*.iml
+mxcache-guice-integration/*.iml
 mxcache-idea-plugin/*.iml
 mxcache-instrumentator/*.iml
 mxcache-jmx/*.iml
