--- a/pom.xml
+++ b/pom.xml
@@ -33,13 +33,11 @@
     </modules>
 
     <scm>
-        <connection>scm:svn:svn://192.0.2.122/magenta-projects/trunk/mxcache</connection>
-        <developerConnection>scm:svn:svn://192.0.2.122/magenta-projects/trunk/mxcache</developerConnection>
+        <connection>scm:svn:svn://svn.maxifier.com/maxifier-projects/mxcache/trunk</connection>
     </scm>
 
     <properties>
         <sonar.skippedModules>mxcache-asm,jconsole-stub</sonar.skippedModules>
-
         <project.build.sourceEncoding>Windows-1251</project.build.sourceEncoding>
     </properties>
 
@@ -107,9 +105,10 @@
         <plugins>
             <plugin>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.0</version>
+                <version>2.2.1</version>
                 <configuration>
-                    <tagBase>svn://192.0.2.122/magenta-projects/tags/mxcache/</tagBase>
+                    <tagBase>svn.maxifier.com/maxifier-projects/mxcache/tags</tagBase>
+                    <branchBase>svn.maxifier.com/maxifier-projects/mxcache/branches</branchBase>
                     <preparationGoals>clean install</preparationGoals>
                     <goals>deploy</goals>
                     <releaseProfiles>release</releaseProfiles>
