--- a/jconsole-stub/pom.xml
+++ b/jconsole-stub/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.maxifier.mxcache</groupId>
         <artifactId>mxcache</artifactId>
-        <version>2.2.18</version>
+        <version>2.2.18-SNAPSHOT</version>
     </parent>
 
     <build>
