--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.maxifier.mxcache</groupId>
     <artifactId>mxcache</artifactId>
-    <version>2.2.18</version>
+    <version>2.2.18-SNAPSHOT</version>
     <name>MxCache</name>
 
     <parent>
@@ -33,7 +33,7 @@
     </modules>
 
     <scm>
-        <connection>scm:svn:svn.maxifier.com/maxifier-projects/mxcache/tags/mxcache-2.2.18</connection>
+        <connection>scm:svn:svn://svn.maxifier.com/maxifier-projects/mxcache/trunk</connection>
     </scm>
 
     <properties>
@@ -107,10 +107,10 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.2.1</version>
                 <configuration>
-                    <tagBase>svn.maxifier.com/maxifier-projects/mxcache/tags</tagBase>
-                    <branchBase>svn.maxifier.com/maxifier-projects/mxcache/branches</branchBase>
+                    <tagBase>svn://svn.maxifier.com/maxifier-projects/mxcache/tags</tagBase>
+                    <branchBase>svn://svn.maxifier.com/maxifier-projects/mxcache/branches</branchBase>
                     <preparationGoals>clean install</preparationGoals>
-                    <goals>deploy</goals>
+                    <goals>deploy sonar:sonar</goals>
                     <releaseProfiles>release</releaseProfiles>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
