--- a/mxcache-ehcache-integration/pom.xml
+++ b/mxcache-ehcache-integration/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.maxifier.mxcache</groupId>
         <artifactId>mxcache</artifactId>
-        <version>2.2.18</version>
+        <version>2.2.19-SNAPSHOT</version>
     </parent>
 
     <dependencies>
