--- a/mxcache-legacy/pom.xml
+++ b/mxcache-legacy/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.maxifier.mxcache</groupId>
         <artifactId>mxcache</artifactId>
-        <version>2.2.19-SNAPSHOT</version>
+        <version>2.2.19</version>
     </parent>
 
     <dependencies>
