--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.maxifier.mxcache</groupId>
     <artifactId>mxcache</artifactId>
-    <version>2.2.22-SNAPSHOT</version>
+    <version>2.2.22</version>
     <name>MxCache</name>
 
     <parent>
@@ -33,7 +33,7 @@
     </modules>
 
     <scm>
-        <connection>scm:svn:svn://svn.maxifier.com/maxifier-projects/mxcache/trunk</connection>
+        <connection>scm:svn:svn://svn.maxifier.com/maxifier-projects/mxcache/tags/mxcache-2.2.22</connection>
     </scm>
 
     <properties>
