--- a/mxcache-asm/pom.xml
+++ b/mxcache-asm/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.maxifier.mxcache</groupId>
         <artifactId>mxcache</artifactId>
-        <version>2.2.24-SNAPSHOT</version>
+        <version>2.2.24</version>
     </parent>
 
     <build>
