--- a/mxcache-guice-integration/pom.xml
+++ b/mxcache-guice-integration/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.maxifier.mxcache</groupId>
         <artifactId>mxcache</artifactId>
-        <version>2.2.27</version>
+        <version>2.2.28-SNAPSHOT</version>
     </parent>
 
     <build>
