--- a/mxcache-idea-plugin/pom.xml
+++ b/mxcache-idea-plugin/pom.xml
@@ -22,6 +22,7 @@
             <groupId>com.intellij</groupId>
             <artifactId>openapi</artifactId>
             <version>8.1</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
@@ -35,6 +36,13 @@
             <groupId>com.intellij</groupId>
             <artifactId>extensions</artifactId>
             <version>8.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jdom</groupId>
+            <artifactId>jdom</artifactId>
+            <version>1.1</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
