--- a/mxcache-instrumentator/pom.xml
+++ b/mxcache-instrumentator/pom.xml
@@ -33,12 +33,7 @@
     <dependencies>
         <dependency>
             <groupId>com.maxifier.mxcache</groupId>
-            <artifactId>mxcache-asm</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.maxifier.mxcache</groupId>
-            <artifactId>mxcache-runtime</artifactId>
+            <artifactId>mxcache-instrumentator-facade</artifactId>
         </dependency>
 
         <dependency>
