MXCACHE-1 - Autoupdate for MxCache idea plugin

--- a/mxcache-idea-plugin/src/main/resources/META-INF/plugin.xml
+++ b/mxcache-idea-plugin/src/main/resources/META-INF/plugin.xml
@@ -26,6 +26,9 @@
         <component>
             <implementation-class>com.maxifier.mxcache.ideaplugin.MxCacheConfiguration</implementation-class>
         </component>
+        <component>
+            <implementation-class>com.maxifier.mxcache.ideaplugin.InstrumentatorFinder</implementation-class>
+        </component>
     </project-components>
 
     <module-components />
