--- a/mxcache-runtime/pom.xml
+++ b/mxcache-runtime/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.maxifier.mxcache</groupId>
         <artifactId>mxcache</artifactId>
-        <version>2.2.30-SNAPSHOT</version>
+        <version>2.2.30</version>
     </parent>
 
     <build>
