--- a/mxcache-ds11-integration/pom.xml
+++ b/mxcache-ds11-integration/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.maxifier.mxcache</groupId>
         <artifactId>mxcache</artifactId>
-        <version>2.2.31-SNAPSHOT</version>
+        <version>2.2.31</version>
     </parent>
 
     <dependencies>
