MXCACHE-59 - Improvement for ResourceViews dependent of several resources
Change-Id: I93d5936f15c28915998283a6e1ab8b409b4516df

--- a/mxcache-generation/src/test/java/com/maxifier/mxcache/template/resource/nodes/ViewableMultipleP2ODependencyNode.template
+++ b/mxcache-generation/src/test/java/com/maxifier/mxcache/template/resource/nodes/ViewableMultipleP2ODependencyNode.template
@@ -46,7 +46,7 @@ public class ViewableMultiple#FT#DependencyNode extends MultipleDependencyNode i
                     if (node instanceof #FT#Storage && node instanceof #FT#Cache) {
                         #FT#Storage storage = (#FT#Storage) node;
                         #FT#Cache cache = (#FT#Cache) node;
-                        if (!equal(cache.getOrCreate(), storage.load())) {
+                        if (!DependencyTracker.isDependentResourceView(cache) && !equal(cache.getOrCreate(), storage.load())) {
                             return true;
                         }
                     } else {
