--- a/mxcache-generation/src/test/java/com/maxifier/mxcache/template/resource/nodes/ViewableMultipleP2PDependencyNode.template
+++ b/mxcache-generation/src/test/java/com/maxifier/mxcache/template/resource/nodes/ViewableMultipleP2PDependencyNode.template
@@ -46,7 +46,7 @@ public class ViewableMultiple#FG#DependencyNode extends MultipleDependencyNode i
                     if (node instanceof #FG#Storage && node instanceof #FG#Cache) {
                         #FG#Storage storage = (#FG#Storage) node;
                         #FG#Cache cache = (#FG#Cache) node;
-                        if (storage.isCalculated() && cache.getOrCreate() != storage.load()) {
+                        if (storage.isCalculated() && !DependencyTracker.isDependentResourceView(cache) && cache.getOrCreate() != storage.load()) {
                             return true;
                         }
                     } else {
