--- a/mxcache-generation/src/test/java/com/maxifier/mxcache/template/resource/nodes/ViewableSingletonP2PDependencyNode.template
+++ b/mxcache-generation/src/test/java/com/maxifier/mxcache/template/resource/nodes/ViewableSingletonP2PDependencyNode.template
@@ -41,7 +41,7 @@ public class ViewableSingleton#FG#DependencyNode extends SingletonDependencyNode
             #FG#Cache cache = (#FG#Cache) instance;
             DependencyNode prevNode = DependencyTracker.track(DependencyTracker.NOCACHE_NODE);
             try {
-                return storage.isCalculated() && cache.getOrCreate() != storage.load();
+                return storage.isCalculated() && !DependencyTracker.isDependentResourceView(cache) && cache.getOrCreate() != storage.load();
             } finally {
                 DependencyTracker.exit(prevNode);
             }
