MXCACHE-49 - MxCache plugin doesn't work with IDEA 13
Update Idea SDJ dependencies versions to 13.696.
Pack MxCache Idea plugin into a single jar but not a set of jars.
Add JPS support into MxCache plugin.

--- a/mxcache-idea-plugin/pom.xml
+++ b/mxcache-idea-plugin/pom.xml
@@ -39,6 +39,16 @@
         </dependency>
 
         <dependency>
+            <groupId>com.intellij</groupId>
+            <artifactId>jps-server</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.intellij</groupId>
+            <artifactId>javac2</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.jdom</groupId>
             <artifactId>jdom</artifactId>
         </dependency>
