--- a/mxcache-idea-plugin/src/main/resources/META-INF/plugin.xml
+++ b/mxcache-idea-plugin/src/main/resources/META-INF/plugin.xml
@@ -39,5 +39,11 @@
         <!--this may be used in idea 8, but not 7-->
         <!--<compiler implementation="com.maxifier.mxcache.ideaplugin.StaticInstrumentator" />-->
         <inspectionToolProvider implementation="com.maxifier.mxcache.ideaplugin.inspections.Validator" />
+
+        <!--
+          IDEA 12 and newer has new out-of-process compile server.
+          It requires a separate plugin, but we combine both IDE & compile server plugin in a single jar
+        -->
+        <compileServer.plugin classpath="mxcache-idea-plugin.jar"/>
     </extensions>
 </idea-plugin>
