--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             </dependency>
             <dependency>
                 <groupId>com.maxifier.mxcache</groupId>
+                <artifactId>mxcache-guava-integration</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.maxifier.mxcache</groupId>
                 <artifactId>mxcache-instrumentator</artifactId>
                 <version>${project.version}</version>
             </dependency>
