Move to sonatype maven repository

--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
     </description>
 
     <parent>
-        <groupId>com.maxifier</groupId>
-        <artifactId>maxifier-project</artifactId>
-        <version>2.5</version>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
     </parent>
 
     <packaging>pom</packaging>
