--- a/mxcache-asm/pom.xml
+++ b/mxcache-asm/pom.xml
@@ -17,9 +17,9 @@
     </description>
 
     <parent>
-        <groupId>com.maxifier</groupId>
-        <artifactId>maxifier-project</artifactId>
-        <version>2.5</version>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
     </parent>
 
     <url>http://github.com/maxifier/mxcache</url>
