--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,12 @@
                 <version>5.0</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.beust</groupId>
+                <artifactId>jcommander</artifactId>
+                <version>1.30</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
