--- a/mxcache-idea-plugin/pom.xml
+++ b/mxcache-idea-plugin/pom.xml
@@ -30,6 +30,13 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+
         <plugins>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
