--- a/mxcache-gradle-plugin/pom.xml
+++ b/mxcache-gradle-plugin/pom.xml
@@ -33,4 +33,13 @@
         </dependency>
 
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>gradle</id>
+            <layout>default</layout>
+            <url>https://repo.gradle.org/gradle/libs-releases-local</url>
+        </repository>
+    </repositories>
+
 </project>
